--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-dev-expression": "^0.2.1",
+    "babel-preset-es2015": "^6.24.1",
+    "leaflet": "^1.0.3",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "^1.3.1",
+    "react-leaflet": "^1.1.6",
     "react-redux": "^4.0.4",
+    "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   },
