--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.16.1",
     "babel-plugin-dev-expression": "^0.2.1",
     "babel-preset-es2015": "^6.24.1",
+    "bulma": "^0.4.1",
     "leaflet": "^1.0.3",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
@@ -28,7 +29,11 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.1",
+    "node-sass": "^4.5.2",
     "react-hot-loader": "^1.3.1",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.17.0",
     "webpack": "^2.5.0",
     "webpack-dev-server": "^2.4.5"
   }
