--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^4.0.4",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
+    "redux-api-middleware": "^1.0.3",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
