--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-plugin-dev-expression": "^0.2.1",
     "babel-preset-es2015": "^6.24.1",
     "bulma": "^0.4.1",
+    "history": "^4.5.1",
     "leaflet": "^1.0.3",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
@@ -21,7 +22,8 @@
     "react-hot-loader": "^1.3.1",
     "react-leaflet": "^1.1.6",
     "react-redux": "^4.0.4",
-    "react-router-dom": "^4.1.1",
+    "react-router": "^3.0.5",
+    "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "redux-api-middleware": "^1.0.3",
     "redux-thunk": "^2.2.0"
