--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-dropzone-component": "^2.0.0",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-leaflet": "^1.1.6",
     "react-redux": "^4.0.4",
