--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-dropzone-component": "^2.0.0",
+    "react-grid-gallery": "^0.3.3",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-leaflet": "^1.1.6",
     "react-redux": "^4.0.4",
