--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
     "redux-api-middleware": "^1.0.3",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "rodal": "^1.5.1"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
