--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "build": "NODE_ENV=production webpack -p --config webpack.production.config.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-dropzone-component": "^2.0.0",
+    "react-google-picker": "0.0.4",
     "react-grid-gallery": "^0.3.3",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-leaflet": "^1.1.6",
