Move static assets

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
 script: 
   - curl localhost:80
 after_success:
-  - if [ true ]; then
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then
     docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD" https://kolbman.xyz:3333;
     docker push kolbman.xyz:3333/ui;
     fi
